--- a/style.css
+++ b/style.css
@@ -41,13 +41,15 @@
     display: block;
   }
   
-  #my-form input[type='text'] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+  #my-form input[type='text'],
+  #my-form input[type='number'] {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
   }
+  
   
   .btn {
     display: block;
